[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system-resource-monitor"
version = "0.2.0"
description = "Anonymous Ubuntu host-level CPU/GPU resource and power monitor."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "YueLab" }
]
license = { text = "MIT" }
keywords = [
  "ubuntu",
  "systemd",
  "monitoring",
  "gpu",
  "nvidia-smi",
  "sqlite",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/mappedinfo/system-resource-monitor"
Repository = "https://github.com/mappedinfo/system-resource-monitor"
Issues = "https://github.com/mappedinfo/system-resource-monitor/issues"
PyPI = "https://pypi.org/project/system-resource-monitor/"

[project.scripts]
system-resource-monitor = "system_resource_monitor:main"

[tool.setuptools]
py-modules = ["system_resource_monitor"]
